# docs/swagger.yaml
@@ -1,9 +1,26 @@
 definitions:
+  entities.Category:
+    properties:
+      id:
+        type: integer
+      itemType:
+        enum:
+        - 1
+        - 2
+        type: integer
+      name:
+        type: string
+    required:
+    - itemType
+    - name
+    type: object
   entities.Item:
     properties:
       categoryId:
         type: integer
       id:
+        type: integer
+      itemType:
         type: integer
       price:
         type: number
@@ -12,40 +29,60 @@ definitions:
         type: integer
       sellerId:
         type: integer
-      vasItems:
-        items:
-          $ref: '#/definitions/entities.VasItem'
-        type: array
     required:
     - categoryId
     - price
     - quantity
     - sellerId
     type: object
-  entities.VasItem:
-    properties:
-      categoryId:
-        type: integer
-      id:
-        type: integer
-      price:
-        type: number
-      quantity:
-        type: integer
-      sellerId:
-        type: integer
-    type: object
 info:
   contact: {}
 paths:
-  /item/{id}:
+  /api/v1/category/create:
+    post:
+      consumes:
+      - application/json
+      description: Create a new category
+      parameters:
+      - description: Category object
+        in: body
+        name: category
+        required: true
+        schema:
+          $ref: '#/definitions/entities.Category'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Category created successfully
+          schema:
+            type: string
+      summary: Create a category
+      tags:
+      - Category
+  /api/v1/category/list:
+    get:
+      description: Get a list of categories
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entities.Category'
+            type: array
+      summary: List categories
+      tags:
+      - Category
+  /api/v1/item/{id}:
     delete:
       consumes:
       - application/json
       description: Delete an item by its ID
       parameters:
       - description: Item ID
-        format: int64
+        format: int
         in: path
         name: id
         required: true
@@ -54,27 +91,20 @@ paths:
       - application/json
       responses:
         "200":
-          description: Item deleted successfully
-          schema:
-            type: string
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: Internal Server Error
+          description: OK
           schema:
             additionalProperties: true
             type: object
       summary: Delete an item by ID
+      tags:
+      - Product
     get:
       consumes:
       - application/json
       description: Get an item by its ID
       parameters:
       - description: Item ID
-        format: int64
+        format: int
         in: path
         name: id
         required: true
@@ -97,7 +127,9 @@ paths:
             additionalProperties: true
             type: object
       summary: Get an item by ID
-  /item/create:
+      tags:
+      - Product
+  /api/v1/item/create:
     post:
       consumes:
       - application/json
@@ -117,7 +149,9 @@ paths:
           schema:
             type: string
       summary: Create an item
-  /item/list:
+      tags:
+      - Product
+  /api/v1/item/list:
     get:
       description: Get a list of items
       produces:
@@ -130,4 +164,6 @@ paths:
               $ref: '#/definitions/entities.Item'
             type: array
       summary: List items
+      tags:
+      - Product
 swagger: "2.0"
